# pyg4ometry-bitbucket

./: .gitignore  .gitmodules  Body.py  CMakeLists.txt  CMakeLists_setup.txt  CSG.py  FlukaLexer.g4  FlukaLexer.py  FlukaParser.py  FlukaParserListener.py  FlukaParserVisitor.py  LICENCE.txt  Makefile  Model.py  README  README.md  README.rst  README.txt  Reader.py  __init__.py  bdsim_utils.py  bodies.py  carve_geom.C  carve_geom.h  exceptions.py  exposer.py  flukaCubit.py  fluka_material_db.py  geometry.py  gitignore  materials.py  meson.build  model.py  parser.py  pyproject.toml  reader.py  reader_old.py  runtest.py  runtests.py  setup.cfg  (+8 more)
.circleci/: config.yml
Parser/: FlukaAssignmentVisitor.py  FlukaLexer.g4  FlukaLexer.py  FlukaParser.g4  FlukaParser.py  FlukaParserListener.py  FlukaParserVisitor.py  Parse.py  __init__.py  generate_parser  rm_antlr_boilerplate  switch-java-and-python
build_cmake/: cmake_install.cmake
coverage/: .coverage  runCoverage.sh
cpcsg/: BSPNode.C  BSPNode.h  CMakeLists.txt  CSG.C  CSG.h  CSG.i  Makefile  Plane.C  Plane.h  Polygon.C  Polygon.h  Solids.C  Solids.h  Vector.C  Vector.h  Vector.i  Vector.py  Vertex.C  Vertex.h  VertsAndPolys.h  boolTest.C
cpcsg/testbuild/: CMakeCache.txt  Makefile  cmake_install.cmake
cpgeant4/solid/: CSGMesh.h  Cons.cpp  Cons.h  CutTubs.cpp  CutTubs.h  Ellipsoid.h  ExtrudedSolid.h  G4Plane.h  Hype.h  Orb.h  Para.h  Paraboloid.h  Plane.cpp  SolidBase.cpp  SolidBase.h  Sphere.cpp  Sphere.h  Tet.h  Torus.cpp  Torus.h  Trap.cpp  Trap.h  Trd.cpp  Trd.h  Tubs.cpp  Tubs.h  TwistedBox.cpp  TwistedBox.h  Union.cpp  Wedge.cpp  Wedge.h
docker/: Dockerfile-archlinux-pyg4ometry  Dockerfile-centos-pyg4ometry  Dockerfile-centos-pyg4ometry-old  Dockerfile-centos-pyg4ometry1  Dockerfile-centos8-pyg4ometry  Dockerfile-fedora-pyg4ometry  Dockerfile-ubuntu-pyg4ometry  Dockerfile-ubuntu20-pyg4ometry  Dockerfile-ubuntu22-pyg4ometry
docker/patches/: README  TDocStd_Application.patch
docs/source/: authorship.rst  cad.rst  citation.rst  cli.rst  conf.py  converting.rst  creating.rst  developer.rst  exporting.rst  geo_comparison.rst  index.rst  installation.rst  introduction.rst  licence.rst  loading.rst  moduledocs.rst  pythonscripting.rst  tutorials.rst  tutorialsAdvanced.rst  version_history.rst  viewing.rst
freecad/: Gdml.py
gdml/: Reader.py  Writer.py
geant4/: LogicalVolume.py  Parameter.py  ParameterVector.py  PhysicalVolume.py  Registry.py  __init__.py
geant4/solid/: Box.py  Cons.py  CutTubs.py  Ellipsoid.py  EllipticalCone.py  EllipticalTube.py  ExtrudedSolid.diff  ExtrudedSolid.py  Hype.py  Intersection.py  Orb.py  Para.py  Paraboloid.py  Plane.py  Polycone.py  Polyhedra.py  Sphere.py  Subtraction.py  TesselatedSolid.py  Tet.py  Torus.py  Trap.py  Trd.py  Tubs.py  TwistedBox.py  TwistedTrap.py  TwoVector.py  Union.py  Wedge.py  __init__.py
images/: ImageToMesh.py
old/: WriterNew.py  geom_jit.py
old/flukaOld/: Reader.py  model.py
paper/: pyg4ometry.tex
paper/diagrams/: rapidModelling.py
papers/: twisted-trap-parameter-map.txt
parser/: FlukaLexer.g4  FlukaParser.g4
profile/fluka/: data.tar.gz.gpg  profile_analysis.py  run_profile.py
public/2019-ipac/: .gitignore  WEPTS054.tex
public/paper/: CPCtemplate.tex  pyg4ometry.bib  pyg4ometry.tex  render.sh
pycsg/: core.py  geom.py
pyfluka/: FlukaParserListener.py  FlukaParserVisitor.py  GRAMMAR_README.org  README  __init__.py  bdsim_utils.py  examples.py  generate_parser.sh  geometry.py  model.py  parser.py  utils.py  vector.py
pyg4ometry/: __init__.py
pyg4ometry/geant4/: AssemblyVolume.py  LogicalVolume.py
pyg4ometry/pyusd/: __init__.py  usd.cxx  usd.h
pyg4ometry/test/: Test.xlsx  __init__.py  runCoverage.sh  runTests.py  ~$Test.xlsx
pyg4ometry/visualisation/: VtkViewer.py
src/pyg4ometry/: __init__.py
stl/: Reader.py  ReaderSTL.py
test/: .#volume.py  Box.py  Cons.py  CutTubs.py  Ellipsoid.py  EllipticalCone.py  EllipticalTube.py  ExtrudedSolid.py  Hype.py  Orb.py  Para.py  Paraboloid.py  Polycone.py  Polyhedra.py  Sphere.py  SphereExploded.py  SphereFullTest.py  SphereTest.py  SphereTestExploded.py  Test.xlsx  Tet.py  Torus.py  Trap.py  Trd.py  Tubs.py  TwistedBox.py  TwistedTrap.py  TwistedTrd.py  Volume.py  Wedge.py  __init__.py  runCoverage.sh  runTests.py
test/GDML_tests/: g4_examples_extended_persistency_gdml_g01.gmad  load_gdml.py
test/avrRender/: 01_Chamber.mtl
test/bdsim/: PythonBdsimAuthoringTests.py  make_migdal_model.py  test_PythonBdsimAuthoring.py
test/cgal/: dragon.off  utahteapot.off
test/cgal/cgal_c++/: CMakeLists.txt  isotropic_remesh.cpp  isotropic_remesh_feature_detect.cpp  isotropic_remesh_split_long.cpp  subdivision_loop.cpp
test/compund/: beamline.gmad
test/flairFluka/: 001_RPP.inp  002_BOX.inp  003_SPH.inp  006_TRC.inp  009_ARB.inp  (+42 more)
test_input/: RCC.inp  RPP.inp  XCC.inp  ZCC.inp  analyse_regions.py  ellipse_test.py  generate_test_file.py  mesh_all_regions.py  profiler.py  redundant_body.inp  rodrigues_rotation.py  simple_fail_pure_python.py  simpler_fail_pure_python.py  zone_test.py
tests/: PLA.inp  RCC.inp  REC.inp  RPP.inp  Rpp_intersection.py  TRC.inp  XCC.inp  XEC.inp  XZP.inp  YCC.inp  YEC.inp  ZCC.inp  ZEC.inp  boolean_subtraction.inp  boolean_union.inp  cube_from_PLA.inp  cut_xcc.inp  cut_ycc.inp  cut_zcc.inp  cuttubs.inp  fluka_test_input.inp  infinite_cube.inp  rot_defi.inp  test_geometry.py  tests.py
vtk/: Viewer.py  Writer.py
(+1178 files in other folders)
